@@ -131,7 +131,7 @@ void condor2nav::CTargetXCSoar::Task(const CFileParserINI &taskParser, const CCo
 {
   unsigned wpFile(Convert<unsigned>(ConfigParser().Value("XCSoar", "TaskWPFileGenerate")));
   TaskProcess(*_profileParser, taskParser, coordConv, sceneryData, 
-              _outputTaskFilePath, xcsoar::MAXTASKPOINTS_XCSOAR, xcsoar::MAXSTARTPOINTS_XCSOAR,
+              _outputTaskFilePath, xcsoar::MAXTASKPOINTS, xcsoar::MAXSTARTPOINTS, &CTargetXCSoar::TaskWaypointDumpXCSoar,
               wpFile > 0, _outputCondor2NavDataPath);
 }
  
